[package]
name = "contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
wee_alloc = { version = "0.4", default-features = false }

[lib]
name = "contract"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"